ship/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $K8S_DEPLOYMENT_NAME
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: $K8S_APP_URI
    http:
      paths:
      - path: $K8S_DEPLOYMENT_CONTEXT_PATH
        backend:
          serviceName: $K8S_DEPLOYMENT_NAME
          servicePort: $K8S_DEPLOYMENT_PORT
